--- a/style.css
+++ b/style.css
@@ -30,6 +30,50 @@ main{
     margin-bottom: 30px;
 }
 
+#buscador{
+    height: 60px;
+    width: 100%;
+    text-align: center;
+    margin:0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#buscador #buscadorInput{
+    width: 400px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#buscador #buscadorBoton{
+    margin-top: 10px;
+    width: 100px;
+    border-radius: 10px;
+}
+
+#tarjetas{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 25px;
+    align-content: space-around;
+    margin-top:50px;
+}
+
+.tarjeta{
+    width: 200px;
+    height: 300px;
+    border: 3px solid black;
+    border-radius: 10px;
+    
+}
+
 
 footer{
     width: 100%;
