--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 #buscador{
@@ -71,9 +71,21 @@ main{
     height: 300px;
     border: 3px solid black;
     border-radius: 10px;
-    
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
+.tarjetaTitulo{
+    padding:10px;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.tarjetaImagenPokemon{
+    width: 100%;
+}
 
 footer{
     width: 100%;
@@ -86,9 +98,5 @@ footer{
     bottom:0px;
     color: white;
     font-weight: bold;
-}
-
-form select{
-    margin-bottom:20px;
 }
 
